Fixed themes filter hidden content and make it scroll based on small screens

--- a/_sass/components/_filter.scss
+++ b/_sass/components/_filter.scss
@@ -4,6 +4,7 @@
 
 .c-filter {
   display: flex;
+  overflow-x: auto;
   margin-bottom: double($base-spacing-unit);
 
   &__btn {
